sample-app/sample-app.deployment.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  name: sample-app
  labels:
    app: sample-app
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
        - name: sample-app
          image: rosskukulinski/sample-app:nsolid-v2.0.0
          ports:
            - containerPort: 4444
              name: sample-app
