sample-app/sample-app.route.yml
apiVersion: v1
kind: Route
metadata:
  name: sample-app
spec:
  to:
    kind: Service
    name: sample-app
